:url-repo: https://github.com/asciidoctor/asciidoctor-pdf

This document provides a high-level view of the changes to the {project-name} by release.
For a detailed view of what has changed, refer to the {url-repo}/commits/main[commit history] on GitHub.

== Unreleased

Improvements::

* upgrade prawn-svg to 0.34 to add support for SVG referenced by image tag (SVG in SVG)

Bug Fixes::

* upgrade prawn-svg to 0.34 to fix warning about base64 gem when using Ruby >= 3.3; apply additional patch to fix bug in prawn-svg

== 2.3.13 (2024-02-16) - @mojavelinux

Improvements::

* support toc start at value for page numbering and running content when toc is added using macro (#2489)

Bug Fixes::

* don't drop text on line above inline image macro in running content value (#2495)
* when looking for a value that only contains an image macro, match the whole string instead of per line (#2495)
* don't warn about missing character in fallback font when inline image is advanced to next page (#2492)
* fix page number of index entries in prepress book when page numbering starts at toc or after toc and toc is inserted using macro (#2487)

=== Details

{url-repo}/releases/tag/v2.3.13[git tag] | {url-repo}/compare/v2.3.12\...v2.3.13[full diff]

== 2.3.12 (2024-02-02) - @mojavelinux

Improvements::

* add combining characters to bundled fonts (#2482)

Bug Fixes::

* ensure indentation is preserved at page transition of index when media=prepress; prevents margin from shifting to the left (#2480)

=== Details

{url-repo}/releases/tag/v2.3.12[git tag] | {url-repo}/compare/v2.3.11\...v2.3.12[full diff]

== 2.3.11 (2024-01-23) - @mojavelinux

Enhancements::

* upgrade prawn-svg dependency to 0.33.x (PR #2469)

Improvements::

* extract shared `smallcaps` method from `TextTransform#smallcaps_pcdata` to make it easier to override
* assign node to `@node` instance variable on table instance to make it easer to access from Prawn::Table extension (#2471)

Bug Fixes::
