@@ -1500,6 +1500,19 @@ describe 'Asciidoctor::PDF::Converter - List' do
           (expect texts[0][:y].round 2).to eql (texts[1][:y].round 2)
         end
       end
+
+      it 'should report source location of truncated item description in dlist' do
+        (expect do
+          pdf = to_pdf <<~EOS, sourcemap: true, attribute_overrides: { 'docfile' => 'test.adoc' }, analyze: true
+          [horizontal]
+          step 1::
+          #{['* task'] * 50 * ?\n}
+          EOS
+
+          (expect pdf.pages.size).to eql 1
+          (expect (pdf.find_unique_text 'step 1')).not_to be_nil
+        end).to log_message severity: :ERROR, message: 'the table cell on page 1 has been truncated; Asciidoctor PDF does not support table cell content that exceeds the height of a single page', file: 'test.adoc', lineno: 3
+      end
     end
 
     context 'Unordered' do
